--- a/Papers/ICMC2009-dbap/icmc2009-dbap.bib
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.bib
@@ -2,12 +2,21 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for lossius at 2009-02-08 22:14:13 +0100 
+%% Created for lossius at 2009-02-08 23:32:06 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Rourke:1998_geometry,
+	Author = {Joseph O'Rourke},
+	Date-Added = {2009-02-08 23:30:10 +0100},
+	Date-Modified = {2009-02-08 23:32:06 +0100},
+	Keywords = {convexhull},
+	Publisher = {Cambridge University Press},
+	Title = {{Computational Geometry in C. 2nd edition}},
+	Year = {1998}}
 
 @inbook{Spors:2004sound_field_synthesis,
 	Abstract = {{Audio Signal Processing for Next-Generation Multimedia Communication Systems presents cutting-edge digital signal processing theory and implementation techniques for problems including speech acquisition and enhancement using microphone arrays, new adaptive filtering algorithms, multichannel acoustic echo cancellation, sound source tracking and separation, audio coding, and realistic sound stage reproduction. This book's focus is almost exclusively on the processing, transmission, and presentation of audio and acoustic signals in multimedia communications for telecollaboration where immersive acoustics will play a great role in the near future.}},
