--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -295,6 +295,11 @@ In order to get a perceptually satisfying result, rendering a distance increase 
 \section{further development}
 
 
+\section{Acknowledgements}
+
+Initial development of DBAP was done for the workshop and exhibition ``Living room'' at Galleri KiT in Trondheim, 2003, produced by The Norwegian production Network for Electronic Arts. The initial implementation in C of the DBAP algorithm was done by André Sier. 
+
+
 
 \bibliographystyle{IEEEtranS}
 \bibliography{icmc2009-dbap} % requires file template.bib
